# zion-support.github.io

./: .auto_commit_status  .babelrc  .babelrc.disabled  .cspell.json  .cspell.json.cleanup-backup.1757919138  .dockerignore  .editorconfig  .env  .env.ai-delegation  .env.automation.template  .env.backup.1758299795  .env.backup.1758656876  .env.development  .env.example  .env.example.backup.1755991086  .env.example.backup.1755991142  .env.example.backup.1755991152  .env.example.backup.1755991349  .env.example.backup.1755991468  .env.example.backup.1755991483  .env.example.backup.1755991489  .env.example.backup.1755991588  .env.example.backup.1757617937  .env.example.backup.1757660900  .env.example.backup.1758223027  .env.example.backup.1758299795  .env.local  .env.local.example  .env.local.example.backup.1757660900  .env.local.example.backup.1758299795  .env.netlify  .env.offworld.example  .env.production  .env.production.example  .env.secure  .env.security.example  .env.template  .eslintignore  .eslintignore.backup.1758223027  .eslintignore.backup.1758223072  (+21343 more)
generated-services/ai-ml-platform-demo/: Makefile  pyproject.toml  requirements.txt
generated-services/ai-ml-platform-demo/config/: config.yaml
generated-services/ai-ml-platform-demo/deploy/: deploy.sh  monitor.sh  setup.sh
generated-services/ai-ml-platform-demo/deploy/kubernetes/: deployment.yaml
generated-services/ai-ml-platform-demo/docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
generated-services/ai-ml-platform-demo/src/: main.py
generated-services/ai-ml-platform-demo/tests/: conftest.py  test_api.py
(+261982 files in other folders)
